Added Lato font

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "hack-yeah-sample-app",
   "version": "0.1.0",
-  "homepage" : "http://lliberadzki.github.io/hackyeah2019",
+  "homepage": "http://lliberadzki.github.io/hackyeah2019",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
+    "fontfaceobserver": "^2.1.0",
     "leaflet": "^1.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
