--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - '10'
 env:
   global:
-  - DEV_IMAGE_NAME=luckjs/smartbin.best
+  - DEV_IMAGE_NAME=luckjs/smartbin
   - DEV_CONTAINER_NAME=smartbin.best_master
   - DEV_VIRTUAL_HOST=smartbin.best
 jobs:
@@ -18,7 +18,7 @@ jobs:
     env: IMAGE_NAME=$DEV_IMAGE_NAME
   - stage: deploy
     before_deploy:
-    - openssl aes-256-cbc -K $encrypted_458ba4ad232a_key -iv $encrypted_458ba4ad232a_iv
+    - openssl aes-256-cbc -K $encrypted_411d32e4d172_key -iv $encrypted_411d32e4d172_iv
       -in .travis/id_rsa.enc -out .travis/id_rsa -d
     - eval "$(ssh-agent -s)"
     - cp .travis/id_rsa ~/.ssh/id_rsa
