--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "leaflet": "^1.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.6.0",
     "react-leaf-carousel": "^1.2.2",
     "react-leaflet": "^2.4.0",
     "react-router-dom": "^5.0.1",
